<resources>
    <string name="app_name">E-FUNERAL MANAGEMENT</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="names">Your Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="resetpassword">Reset Password</string>
    <string name="register">REGISTER NOW</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
